Fri Dec 22 15:18:49 2000  Steve Huston  <shuston@riverace.com>

        * ace/ace-dll.icc: Added Basic_Stats.{h cpp} to build clean.

Fri Dec 22 14:00:41 2000  Steve Huston  <shuston@riverace.com>

        * ace/config-all.h: On HP-UX 11, when figuring ACE_bad_alloc exception
          class, account for older compilers that don't define __HP_aCC.

Fri Dec 22 12:56:06 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/ACE.cpp (process_active): Call CloseHandle before return to
	  avoid handle leaks on Win32.  Thanks to Arnaud Compan
	  <compan@ipanematech.com> for the fix.

Fri Dec 22 13:04:58 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/run_all_list.pm: Added the bidirectional test to the list.

Fri Dec 22 12:43:54 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/OS.h: Fixed a typo.

Fri Dec 22 09:12:37 2000  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: ACE_DEFAULT_FILE_PERMS - added FILE_SHARE_DELETE to the
          bits if building on Win NT4 or greater. Thanks to Nanbor Wang
          for calling attention to this.

Fri Dec 22 08:06:10 2000  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/Refcounted_Auto_Ptr_Test.cpp: Fixed the problem with an
          undefined ACE_Auto_Basic_Ptr<Scheduler> by adding an explicit
          template instantiation.  Thanks to Frank A. Hunleth
 	  <fhunleth@cs.wustl.edu> for reporting this.

Thu Dec 21 18:12:38 2000  Steve Huston  <shuston@riverace.com>

        * ace/ace-dll.icc, ace-lib.icc: Added OS_Errno.(cpp h) to the files
          list. Thanks to Jerry Odenwelder for pointing out the need for these.

Thu Dec 21 16:45:28 2000  Steve Huston  <shuston@riverace.com>

        * tests/Capabilities_Test.cpp: Added missing \n to a ACE_ERROR
          statement, and added ACE_DEFAULT_FILE_PERMS to the ACE_OS::open
          call to create the test file. It used to be 0600, but that was
          removed to satisfy Win32 which now pays attention to that arg.
